examples/test/testpolicy7938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7938
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key1: value49
      key21: value2
      key10: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value30
      podSelector:
        matchLabels:
          key15: value42
          key38: value25
          key30: value31
